artifacts/manifests/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-model
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
  - matches:
    - headers:
      - type: Exact
        name: x-route-picker
        value: cpu
    backendRefs:
    - name: cpu-models
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
  - matches:
    - headers:
      - type: Exact
        name: x-route-picker
        value: gpu
    backendRefs:
    - name: gpu-models
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
